<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground"
    android:layout_height="match_parent"
    tools:context="com.example.gagandeep.myapplication.Mainv2Activity.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_marginStart="0.8sp"
            android:layout_marginEnd="0.8sp"
            android:layout_marginBottom="0.8sp"
            android:layout_marginTop="1.6sp"
            android:background="@color/design_1">
            <TextView
                android:id="@+id/textCalculator"
                style="@style/mainActivity"
                android:text="@string/calculator"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:layout_height="wrap_content"
            android:background="@color/design_2">
            <TextView
                android:id="@+id/textMedia"
                style="@style/mainActivity"
                android:text="@string/media_player"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:layout_margin="0.8sp"
            android:background="@color/design_3">
            <TextView
                android:id="@+id/textList"
                style="@style/mainActivity"
                android:text="@string/list"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_4">
            <TextView
                android:id="@+id/textList2"
                style="@style/mainActivity"
                android:text="@string/second_list"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_5">
            <TextView
                android:id="@+id/textList3"
                style="@style/mainActivity"
                android:text="@string/custom_list"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_6">
            <TextView
                android:id="@+id/textList4"
                style="@style/mainActivity"
                android:text="@string/custom_list2"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_7">
            <TextView
                android:id="@+id/textList5"
                style="@style/mainActivity"
                android:text="@string/third_custom_list"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_8">
            <TextView
                android:id="@+id/textNotification"
                style="@style/mainActivity"
                android:text="@string/notification"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_9">
            <TextView
                android:id="@+id/test"
                style="@style/mainActivity"
                android:text="test"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="0sp"
            android:elevation="10dp"
            android:layout_margin="0.8sp"
            android:background="@color/design_10">
            <TextView
                android:id="@+id/textProgress"
                style="@style/mainActivity"
                android:text="@string/in_progress"/>
        </FrameLayout>


    </LinearLayout>


</ScrollView>
